--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "platzom",
   "version": "0.1.0",
   "description": "Traductor de idioma platzom",
-  "main": "index.js",
+  "main": "dist/sr/platzom.js",
   "scripts": {
-    
+    "build": "babel src/platzom.js -d dist",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,11 @@
     "js"
   ],
   "author": "Mauricio Hidalgo <mhidalgodg@gmail.com> (https://www.facebook.com/mauricio.hidr)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
+    "chai": "^4.1.0",
+    "mocha": "^3.4.2"
+  }
 }
